this is a js file

--- a/code/index.html
+++ b/code/index.html
@@ -108,6 +108,7 @@
             Copyright &copy; www.myOnlineMeal.com. All rights reserved!
         </div>
     </footer>
+    <script src="NEWGIT/hardatt.js"></script>
 </body>
 
 </html>
